Fix press Release alignment

--- a/css/bwmassoc-omega.styles.css
+++ b/css/bwmassoc-omega.styles.css
@@ -558,7 +558,7 @@ ul.breadcrumb {
 .node-type-press-release.panelized-node .content-main {
   max-width: 960px;
   background: #FFF;
-  margin: 40px auto;
+  margin: 1em auto;
   position: relative;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   padding: 5%;
