--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -369,7 +369,7 @@
   .content-main {
 	max-width: 960px;
 	background: #FFF;
-	margin: 40px auto;
+	margin: 1em auto;
 	position: relative;
 	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 	padding: 5%;
